--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
+    "antd": "^5.0.1",
     "git": "^0.1.5",
     "moment": "^2.29.4",
     "next": "12.1.6",
